--- a/watchdog_ai/viewer/templates/viewer/base.html
+++ b/watchdog_ai/viewer/templates/viewer/base.html
@@ -13,7 +13,7 @@
         <a href="{% url 'upload' %}">Upload Procurement Data</a>
         <a href="{% url 'transactions' %}">Transaction View</a>
         {% comment %} <a href="{% url 'reports' %}">Reports</a> {% endcomment %}
-            <a href="{% url 'viewer:blockchain_list_view' %}">Simulated Blockchain Ledger</a>
+            <a href="{% url 'blockchain_list_view' %}">Simulated Blockchain Ledger</a>
     </div>
     <div class="container">
         {% block content %}
